--- a/src/css/modalCokctails.css
+++ b/src/css/modalCokctails.css
@@ -14,17 +14,22 @@
     pointer-events: all;
     opacity: 1;
     visibility: hidden;
+    transform: translate(-50%, -50%) scale(1);
 }
 
 .modal {
 
     position: absolute;
-    width: 100vw;
-    min-height: 100vh;
+    width: 335px;
+    top: 50%;
+    left: 50%;
+    max-height: 100vh;
     padding: 40px 20px 40px 20px;
     background-color: var(--modal-background);
+    transform: translate(-50%, -50%) scale(1);
+    border-radius: 15px;
+    overflow: auto;
     z-index: 400;
-    
 }
     
 .dark-theme .modal{
@@ -158,7 +163,7 @@ fill:var(--light-letters-color);
     /* align-items: flex-start; */
     gap: 10px;
     padding: 16px 44px;
-    min-width: 100%;
+    width: 100%;
     height: 56px;
     border-radius: 12px;
     background: var(--main-color);
@@ -168,7 +173,7 @@ fill:var(--light-letters-color);
     justify-content: center;
 
     font-family: Poppins;
-    font-size: 18px;
+    font-size: 14px;
     font-style: normal;
     font-weight: 600;
     line-height: 1.33;
@@ -192,7 +197,7 @@ fill:var(--light-letters-color);
     color: #242424;
 
     font-family: Poppins;
-    font-size: 18px;
+    font-size: 14px;
     font-style: normal;
     font-weight: 600;
     line-height: 1.33; 
