--- a/src/css/cocktailsMarckup.css
+++ b/src/css/cocktailsMarckup.css
@@ -44,6 +44,8 @@
   padding-right: 14px;
 }
 .cocktail-card-img {
+  width: 307px;
+  height: 257px;
   border-radius: 16px;
   background: transparent;
   box-shadow: 0px 4px 46px 0px rgba(0, 0, 0, 0.05);
