--- a/src/css/header.css
+++ b/src/css/header.css
@@ -202,6 +202,10 @@ letter-spacing: 0.36px;
   gap: 4px;
   margin: auto;
 }
+ .spriteMob{
+    fill: none;
+    stroke: #ffffff;
+  }
 .header-mobile-list{
   color: rgba(253, 253, 255, 0.50);
 font-family: Poppins;
@@ -392,7 +396,8 @@ gap: 8px;
 }
 
   .chevron-desing{
-    fill: #7E8FDD ;
+    fill: none;
+    stroke: #7E8FDD;
   }
   
   
